fixed contact image being too large

--- a/global/css/global.css
+++ b/global/css/global.css
@@ -230,5 +230,5 @@ div.contact {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height:100%;
+    height:90%;
 }
